# Learning_Go

./: README
Go_video_example/: go.mod  main.go
Go_video_example/mascot/: mascot.go  mascot_test.go
andMoreFlags/: go.mod  main.go
bitMapFlags/: go.mod  main.go
c_header_example/: c_header.ex.go  c_header_ex  go.mod
c_header_example/my_includes/: my_mcall.h
c_print_hello/: main  main.go  mycode.c
calling_c_func/: calling_c_func  calling_c_func.go  go.mod
calling_c_func/c_functions/: c_add_and_print.c  c_add_and_print.h  test
capturing_stderr/: capturestderr_test.go  go.mod
ch1/: Makefile  hello.go
ch10/ex10_1_3/: go.mod  main.go
ch10/exercises/ex1/: go.mod  go.sum  main.go  workspace_app
ch11/exercises/ex1/: help.txt  main.go
ch11/stinger_ex/: artist_string.go  go.mod  main.go
ch12/examples/gbt/: go.mod  main.go
ch12/examples/goroutine/: main.go
ch12/exercises/ex1/: main.go
ch12/exercises/ex2/: main.go
ch12/exercises/ex3/: main.go
ch13/examples/client/: main.go
ch13/examples/ex3/: go.mod  main.go
ch13/examples/ex3_client/: go.mod  main.go
ch13/examples/response_controller/: go.mod  main.go
ch13/examples/server/: go.mod  main.go
ch13/exercises/ex1/: go.mod  main.go
ch13/exercises/ex1_client/: go.mod  main.go
ch13/exercises/ex2/: main.go
ch13/exercises/ex3/: main.go
ch14/: Readme.txt
ch14/exercises/ex1/: main.go
ch2/ex1/: main.go
ch2/ex2/: main.go
ch2/ex3/: main.go
ch3/ex3_7/: go.mod  main.go
ch3/ex3_8/: go.mod  main.go
ch3/exercises/ex1/: main.go
ch3/exercises/ex2/: main.go
ch3/exercises/ex3/: main.go
ch4/exercises/ex1/: main.go
ch4/exercises/ex2/: main.go
ch4/exercises/ex3/: main.go
ch5/exClosures/: go.mod  main.go
ch5/exercises/ex1/: main.go
ch5/exercises/ex2/: go.mod  main.go  testFile.txt
ch5/exercises/ex3/: main.go
ch5/retFuncFromFunc/: go.mod  main.go
ch5/slice_dir/: go.mod  main.go
ch6/exercises/ex1/: go.mod  main.go  main.go.bk  main.go.bk.ex
ch6/exercises/ex2/: main.go
ch6/exercises/ex3/: main.go
ch7/ex_dependency_inj/: go.mod  main.go
ch7/exercises/ex1/: go.mod  main.go
ch7/exercises/ex2/: README  go.mod  main.go
ch7/exercises/ex3/: go.mod  main.go
ch8/exercises/ex1/: main.go
ch8/exercises/ex2/: main.go
ch8/exercises/ex3/: main.go
ch9/exercises/ex1/: main.go
ch9/exercises/ex2/: main.go
ch9/exercises/ex3/: main.go
ch9/json_error_handler/: go.mod  main.go
creating_go_library/c_src/: usingSimpleLib  usingSimpleLib.c
creating_go_library/go_src/: go.mod  usingGoCLib  usingGoClib.go
creating_go_library/lib/: go.mod  libSimple.go  libSimple.h
flagFunc/: go.mod  main.go
flags/: go.mod  main.go
flags2/: go.mod  main.go
goPath/hello/: hello.go
goPath/hello/anotherstrings/: anotherreverse.go
goPath/hello/morestrings/: reverse_test.go
go_c_server_client/: README.txt
go_c_server_client/c_client/: Makefile  c_client.c
go_c_server_client/go_server/: Makefile  go.mod  mygosvr.go
go_c_server_client/go_server/c_functions/: my_c_adder.c  my_c_adder.h
go_c_server_client/grpc_lib/: go.mod  myServerCall.proto
go_c_server_client/grpc_lib/myServerCall/: myServerCall.pb.go  myServerCall_grpc.pb.go
go_c_server_client/include/: c_serv_calls.h  clientMakeSvrCall.h  myTypes.h
go_c_server_client/lib/c_lib/: Makefile  c_serv_calls.c
go_c_server_client/lib/go_lib/: Makefile  clientMakeSvrCall.go  go.mod
go_local_library/modern/: go.mod
go_local_library/modern/server/: go.mod
grpc_example/: CMakeLists.txt  CMakeLists1.bk  CMakeLists_stable.txt  go.mod  main.go
grpc_example/grpc_cpp/: server.cc
grpc_example/grpc_server_go/: server.go
grpc_example/protos/: helloWorld.proto
grpc_example/protos/cpp_generated/: helloWorld.grpc.pb.cc  helloWorld.grpc.pb.h  helloWorld.pb.cc  helloWorld.pb.h
grpc_example/protos/go_generated/: helloWorld.pb.go
grpc_example/protos/go_generated/helloWorld/: helloWorld.pb.go  helloWorld_grpc.pb.go
hello/: go.mod  go.mod.bak  hello  hello.go
hello/morestrings/: reserve_test.go  reverse.go
moreFlags/: go.mod  main.go
multiFlags/: go.mod  main.go
relfection_argsParse/: main.go
shapes_enum/: go.mod  main.go
trying_another_arg_parser/: go.mod  main.go
(+8 files in other folders)
